--- a/Index.html
+++ b/Index.html
@@ -13,7 +13,13 @@
   <link href="https://fonts.googleapis.com/css?family=Merriweather:400,300,300italic,400italic,700,700italic" rel="stylesheet" type="text/css" />
   <!-- SimpleLightbox plugin CSS-->
   <link href="https://cdnjs.cloudflare.com/ajax/libs/SimpleLightbox/2.1.0/simpleLightbox.min.css" rel="stylesheet" />
-  <!-- Core theme CSS (includes Bootstrap)-->
+  <!-- whatsapp -->
+  <link href="css/whatsapp.css" rel="stylesheet" />
+  <!-- whatsapp ICON -->
+  <a href="https://wa.me/51991660316" target="_blank" class="whatsapp-button">
+    <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/6/6b/WhatsApp.svg/1024px-WhatsApp.svg.png" alt="WhatsApp" class="whatsapp-icon">
+  </a>
+  <!-- Core theme CSS (includes Bootstrap)--> 
   <link href="css/styles.css" rel="stylesheet" />
   <!-- Bootstrap CSS -->
   <link
@@ -201,6 +207,7 @@
         </div>
         </div>
     </section>
+    
   
   <!-- Footer -->
     <footer class="text-white py-1" style="background-color: #23495a;">
