--- a/Contacto.html
+++ b/Contacto.html
@@ -21,6 +21,7 @@
   </a>
   <!-- Core theme CSS (includes Bootstrap)-->
   <link href="css/styles.css" rel="stylesheet" />
+  <link href="css/modal.css" rel="stylesheet" />
   <!-- Bootstrap CSS -->
   <link
     href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
@@ -30,6 +31,7 @@
     href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
     rel="stylesheet"
   />
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body  id="page-top">
     <!-- Navigation-->
@@ -40,12 +42,106 @@
             <div class="collapse navbar-collapse" id="navbarResponsive">
                 <ul class="navbar-nav ms-auto my-2 my-lg-0">
                     <li class="nav-item"><a class="nav-link" href="Index.html">INICIO</a></li>
-                    <li class="nav-item"><a class="nav-link" href="Servicios.html">SERVICIOS</a></li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#" id="serviciosLink">SERVICIOS</a>
+                    </li>
                     <li class="nav-item"><a class="nav-link" href="Contacto.html">CONTACTO</a></li>
                 </ul>
             </div>
         </div>
     </nav>
+    <!-- Modal de Servicios -->
+    <div class="modal fade custom-modal" id="serviciosModal" tabindex="-1" role="dialog" aria-labelledby="serviciosModalLabel" aria-hidden="true">
+        <div class="modal-dialog custom-modal-dialog" role="document">
+            <div class="modal-content custom-modal-content">
+                <!-- Header del Modal -->
+                <div class="modal-header custom-modal-header">
+                    <div class="container">
+                        <div class="row custom-row">
+                            <!-- Sección 1 -->
+                            <div class="col-md-4 header-link-wrapper">
+                                <h4><a href="#" class="modal-header-link active" data-target="#servicio1" onclick="showService('servicio1')">Gestión de Calidad para Empresas</a></h4>
+                            </div>
+                            <!-- Sección 2 -->
+                            <div class="col-md-4 header-link-wrapper">
+                                <h4><a href="#" class="modal-header-link" data-target="#servicio2" onclick="showService('servicio2')">Gestión de Seguridad Operacional (SMS)</a></h4>
+                            </div>
+                            <!-- Sección 3 -->
+                            <div class="col-md-4 header-link-wrapper">
+                                <h4><a href="#" class="modal-header-link" data-target="#servicio3" onclick="showService('servicio3')">Asesoría Especializada en Aeropuertos</a></h4>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <!-- Cuerpo del Modal -->
+                <div class="modal-body custom-modal-body">
+                    <div class="container">
+                        <div class="row custom-row">
+                            <!-- Contenido de Servicio 1 -->
+                            <div class="col-md-12 modal-content-section" id="servicio1">
+                                <ul>
+                                    <li>
+                                        <h5>Funciones Clave del SGC</h5>
+                                        <p>Organiza procesos, documenta procedimientos, mejora la satisfacción del cliente, y promueve la mejora continua mediante estándares como ISO 9001.</p>
+                                    </li>
+                                    <li>
+                                        <h5>Beneficios del SGC</h5>
+                                        <p>Optimiza la eficiencia, refuerza la competitividad, garantiza el cumplimiento normativo y fomenta la fidelización del cliente.</p>
+                                    </li>
+                                    <li>
+                                        <h5>Resumen Estratégico del SGC</h5>
+                                        <p>Herramienta esencial para la sostenibilidad empresarial, que impulsa la calidad, mejora continua y satisfacción del cliente en un mercado competitivo.</p>
+                                    </li>
+                                </ul>
+                            </div>
+                            <!-- Contenido de Servicio 2 -->
+                            <div class="col-md-12 modal-content-section" id="servicio2" style="display: none;">
+                                <div class="row">
+                                    <div class="col-md-6">
+                                        <ul>
+                                            <li><h5>Introducción al SMS en Otros Sectores</h5></li>
+                                            <li><h5>SMS en la Industria Marítima</h5></li>
+                                            <li><h5>SMS en la Industria de la Salud</h5></li>
+                                            <li><h5>SMS en la Industria de la Energía</h5></li>
+                                        </ul>
+                                    </div>
+                                    <div class="col-md-6">
+                                        <ul>
+                                            <li><h5>SMS en el Transporte Terrestre</h5></li>
+                                            <li><h5>SMS en la Industria Química</h5></li>
+                                            <li><h5>SMS en la Industria de la Construcción</h5></li>
+                                        </ul>
+                                    </div>
+                                </div>
+                            </div>
+                            <!-- Contenido de Servicio 3 -->
+                            <div class="col-md-12 modal-content-section" id="servicio3" style="display: none;">
+                                <div class="row">
+                                    <div class="col-md-6">
+                                        <ul>
+                                            <li><h5>Diseño e Implementación de SMS</h5></li>
+                                            <li><h5>Evaluación de Riesgos Operacionales</h5></li>
+                                            <li><h5>Auditorías de Seguridad Operacional</h5></li>
+                                        </ul>
+                                    </div>
+                                    <div class="col-md-6">
+                                        <ul>
+                                            <li><h5>Capacitación en Seguridad Operacional</h5></li>
+                                            <li><h5>Entrenamiento y Formación</h5></li>
+                                        </ul>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <!-- Footer del Modal -->
+                <div class="modal-footer custom-modal-footer">
+                    <p>&copy; 2025 QSL Consultores - Todos los derechos reservados</p>
+                </div>
+            </div>
+        </div>
+    </div>
    <!-- CONTACTO -->
    <section class="page-section">
     <div class="container">
@@ -128,6 +224,7 @@
   
    <!-- Core theme JS-->
    <script src="js/scripts.js"></script>
+   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
    <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * *-->
    <!-- * *                               SB Forms JS                               * *-->
    <!-- * * Activate your form at https://startbootstrap.com/solution/contact-forms * *-->
