--- a/Index.html
+++ b/Index.html
@@ -68,7 +68,7 @@
     <!-- QUIENES SOMOS -->
     <section class="page-section bg-style " id="inicio">
         <div class="container text-white ">
-            <h3 class="h4 text-center mb-4">¿Quiénes Somos?</h3>
+            <h2 class="h2 text-center mb-4">¿Quiénes Somos?</h2>
             <hr class="divider-light" />
             <div class="text-center">
                 <p >En QUALITY AND SAFETY LABOR ASOCIADOS, transformamos los procesos empresariales a través
@@ -152,7 +152,7 @@
     </section>
 
     <!-- VALORES-->
-    <section class="py-5">
+    <section class="py-5 bg-style-valores">
         <div class="container">
         <div class="text-center mb-4">
             <h3 class="h4 text-center mb-4">Valores Propuestos</h3>
@@ -207,22 +207,67 @@
         </div>
         </div>
     </section>
+
+
+    <section class="py-5">
+        <div class="container content">
+            <div class="image-container">
+             <img alt="Person working on a computer displaying a consulting website" height="500" src="https://storage.googleapis.com/a1aa/image/1OIlaQKsUhIEKBboCNfXklWa69CnKcWumfqX0Sw7n7R9wtGUA.jpg" width="500"/>
+            </div>
+            <div class="text-container">
+             
+             <h2>
+              Valores Propuestos:
+             </h2>
+             <h5>
+                Excelencia
+             </h5>
+             <ul>
+              <li>
+                Compromiso con altos estándares en todos nuestros servicios.
+              </li>
+              <li>
+               Reconstrucción de registro de ventas
+              </li>
+              <li>
+               Reconstrucción de libro diario
+              </li>
+              <li>
+               Reconstrucción de libro mayor
+              </li>
+              <li>
+               Reconstrucción de libro de inventarios y balances
+              </li>
+              <li>
+               Reconstrucción de registro de activo fijo
+              </li>
+              <li>
+               Reconstrucción de registro de costos
+              </li>
+              <li>
+               Reconstrucción del libro Kardex (registro del inventario permanente en unidades físicas y registro del inventario permanente valorizado)
+              </li>
+             </ul>
+            </div>
+           </div>
+    </section>
+
     
   
   <!-- Footer -->
-    <footer class="text-white py-1" style="background-color: #23495a;">
+    <footer class="text-white py-1 bg-style ">
         <section class="py-3">
             <div class="container">
                 <div class=" row align-items-center py-0">
-                    <div class="col-md-6 text-center text-md-end">
+                    <div class="col-md-6  text-center text-md-end">
                         <img
                         src="img/LOGO/LOGOQSL-BLANCO.png"
                         alt="QSL logo"
-                        width="90"
-                        height="80"
+                        width="150"
+                        height="140"
                         />
                     </div>
-                    <div class="col-md-6 text-center text-md-start mb-md-0">
+                    <div class="col-md-6 text-center text-md-start px-lg-5 contact-info">
                         <p>Javier Prado Este N° 560 Piso 23 Of. 2301</p>
                         <p>Tel: 739 7715 Cel: 991 660 316</p>
                         <p>www.qslconsultores.com</p>
@@ -230,8 +275,8 @@
                 </div>
             </div>
         </section>
-        <div class="text-center mt-0">
-        <p>© Copyright qslconsultores. Todos los derechos reservados</p>
+        <div class="text-center mt-0 ">
+        <p>© Copyright <strong> qslconsultores. </strong>  Todos los derechos reservados</p>
         </div>
     </footer>
 
