--- a/Contacto.html
+++ b/Contacto.html
@@ -18,9 +18,10 @@
   <!-- whatsapp ICON -->
   <a href="https://wa.me/51991660316" target="_blank" class="whatsapp-button">
     <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/6/6b/WhatsApp.svg/1024px-WhatsApp.svg.png" alt="WhatsApp" class="whatsapp-icon">
-  </a>
+  </a>  
   <!-- Core theme CSS (includes Bootstrap)-->
   <link href="css/styles.css" rel="stylesheet" />
+  <link href="css/form.css" rel="stylesheet" />
   <!-- Bootstrap CSS -->
   <link
     href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
@@ -94,22 +95,50 @@
             </div>
         </div>
     </div>
-</section>
+   </section>
 
+
+  <!-- <section>
+    <div class="contact-form">
+        <h2 class="text-center mb-4">Contáctanos</h2>
+        <form action="enviar_formulario.php" method="POST">
+            <div class="mb-3">
+                <label for="nombre" class="form-label">Nombre</label>
+                <input type="text" name="nombre" id="nombre" class="form-control" placeholder="Ingresa tu nombre" required>
+            </div>
+            <div class="mb-3">
+                <label for="correo" class="form-label">Correo Electrónico</label>
+                <input type="email" name="correo" id="correo" class="form-control" placeholder="Ingresa tu correo" required>
+            </div>
+            <div class="mb-3">
+                <label for="telefono" class="form-label">Teléfono</label>
+                <input type="tel" name="telefono" id="telefono" class="form-control" placeholder="Ingresa tu número telefónico" required>
+            </div>
+            <div class="mb-3">
+                <label for="mensaje" class="form-label">Mensaje</label>
+                <textarea name="mensaje" id="mensaje" rows="4" class="form-control" placeholder="Escribe tu mensaje" required></textarea>
+            </div>
+            <div class="text-center">
+                <button type="submit" class="btn btn-submit">Enviar Mensaje</button>
+            </div>
+        </form>
+    </div>
+    </section>-->
+    
   <!-- Footer -->
-  <footer class="text-white py-1" style="background-color: #23495a;">
+  <footer class="text-white py-1 bg-style ">
     <section class="py-3">
         <div class="container">
             <div class=" row align-items-center py-0">
-                <div class="col-md-6 text-center text-md-end">
+                <div class="col-md-6  text-center text-md-end">
                     <img
                     src="img/LOGO/LOGOQSL-BLANCO.png"
                     alt="QSL logo"
-                    width="90"
-                    height="80"
+                    width="150"
+                    height="140"
                     />
                 </div>
-                <div class="col-md-6 text-center text-md-start mb-md-0">
+                <div class="col-md-6 text-center text-md-start px-lg-5 contact-info">
                     <p>Javier Prado Este N° 560 Piso 23 Of. 2301</p>
                     <p>Tel: 739 7715 Cel: 991 660 316</p>
                     <p>www.qslconsultores.com</p>
@@ -117,10 +146,10 @@
             </div>
         </div>
     </section>
-    <div class="text-center mt-0">
-      <p>© Copyright qslconsultores. Todos los derechos reservados</p>
+    <div class="text-center mt-0 ">
+    <p>© Copyright <strong> qslconsultores. </strong>  Todos los derechos reservados</p>
     </div>
-  </footer>
+</footer>
 
 
   <!-- Bootstrap JS -->
