--- a/Servicios.html
+++ b/Servicios.html
@@ -247,19 +247,19 @@
         </div>
     </section>
    <!-- Footer -->
-  <footer class="text-white py-1" style="background-color: #23495a;">
+   <footer class="text-white py-1 bg-style ">
     <section class="py-3">
         <div class="container">
             <div class=" row align-items-center py-0">
-                <div class="col-md-6 text-center text-md-end">
+                <div class="col-md-6  text-center text-md-end">
                     <img
                     src="img/LOGO/LOGOQSL-BLANCO.png"
                     alt="QSL logo"
-                    width="90"
-                    height="80"
+                    width="150"
+                    height="140"
                     />
                 </div>
-                <div class="col-md-6 text-center text-md-start mb-md-0">
+                <div class="col-md-6 text-center text-md-start px-lg-5 contact-info">
                     <p>Javier Prado Este N° 560 Piso 23 Of. 2301</p>
                     <p>Tel: 739 7715 Cel: 991 660 316</p>
                     <p>www.qslconsultores.com</p>
@@ -267,10 +267,10 @@
             </div>
         </div>
     </section>
-    <div class="text-center mt-0">
-      <p>© Copyright qslconsultores. Todos los derechos reservados</p>
+    <div class="text-center mt-0 ">
+    <p>© Copyright <strong> qslconsultores. </strong>  Todos los derechos reservados</p>
     </div>
-  </footer>
+</footer>
 
     <!-- Bootstrap core JS-->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
